@@ -1,3 +1,8 @@
+2008-06-25  Øyvind Kolås  <pippin@o-hand.com>
+
+	* clutter-box2d/clutter-box2d-actor.cpp: adapt to new multiple device
+	support in Clutter-0.7.
+
 2008-06-23  Øyvind Kolås  <pippin@o-hand.com>
 
 	* clutter-box2d/clutter-box2d-util.c: made the
